samples/_failures_safe/1761505545_359e04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_234d38c9.c: In function ‘main’:
./samples/SAFE/__tmp_234d38c9.c:147:12: error: missing terminating " character
  147 |     printf("\nMatrix 1:\n
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_234d38c9.c:147:5: error: expected expression at end of input
  147 |     printf("\nMatrix 1:\n
      |     ^~~~~~
./samples/SAFE/__tmp_234d38c9.c:147:5: error: expected declaration or statement at end of input
